start and stop more services as foreground services and provide the foreground notifications for Android O

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -220,10 +220,12 @@
     <string name="media">Media</string>
     <string name="test_notifications_channel">Test notifications</string>
     <string name="status_notifications_channel">Status notifications</string>
+    <string name="general_notifications_channel">General notifications</string>
     <string name="media_parse_channel">Media parser</string>
     <string name="group_summary_notifications">Message group summaries</string>
     <string name="failed_messages_channel">Failed messages</string>
     <string name="media_parse_text">Parsing media from previous text message…</string>
+    <string name="creating_channels_text">Creating notification channels…</string>
 
 
     <!-- About, Help and Feedback and Settings -->
