fix some wearable login stuff

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -484,6 +484,7 @@
         Your 5 star reviews warm my heart :)</string>
     <string name="share_promo">Hey, I am loving Pulse for texting! Give it a try:
         https://play.google.com/store/apps/details?id=xyz.klinker.messenger</string>
+    <string name="verifying_password">Verifying password…</string>
 
 
     <!-- Times -->
